new_k8s/task-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-backend
  namespace: task-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-backend
  template:
    metadata:
      labels:
        app: task-backend
    spec:
      containers:
      - name: task-backend
        image: us-central1-docker.pkg.dev/project-d1262ca6-2beb-445a-ac2/task-repo/task-backend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
