new_k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-frontend
  namespace: task-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-frontend
  template:
    metadata:
      labels:
        app: task-frontend
    spec:
      containers:
      - name: task-frontend
        image: us-central1-docker.pkg.dev/project-d1262ca6-2beb-445a-ac2/task-repo/task-frontend:1.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet: 
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "180Mi"
            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: task-frontend
    namespace: task-manager
spec:
  selector:
    app: task-frontend
  ports:
  - port: 80
    targetPort: 80
